# richclass

./: .pypirc  Pipfile  README.md  pyproject.toml  setup.py
app/: README.md
app/richclass/: __init__.py
app/richclass/src/: richpath.py
app/richclass/tests/: logging.conf  monitoring_documents.py
src/: richpath.py
